[project]
name = "reflection-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.5.1",
    "grandalf>=0.8",
    "isort>=8.0.1",
    "langchain>=1.3.9",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "python-dotenv>=1.2.2",
]
